# pyconde-website

./: .gitattributes  .gitignore  .markdownlint.json  ASSETS-LICENSE  CONTACT_FORM_IMPLEMENTATION.md  MAILGUN_MIGRATION.md  Makefile  NOTICE.md  PyconDE.lektorproject  README.md  RECAPTCHA_SETUP.md  pyproject.toml  requirements.txt  submissions.py
.devcontainer/: devcontainer.env.template  devcontainer.json
.github/: CODEOWNERS  NOTICE.md
assets/: robots.txt  site.webmanifest
backend/: .env.example  .gitignore  DEPLOY.md  README.md  SECURITY.md  __init__.py  cert_api.py  config.py  email_service.py  lambda_handler.py  main.py  recaptcha.py  requirements.txt  samconfig.toml  template-secure.yaml  template.yaml  topic_email_config.py
content/: contents.lr
content-archived/: README.md
databags/: analytics.yaml  branding.yaml  certificate_share.yaml  community.yaml  faq-copy.json  faq.bak  faq.json  faq.yaml  faq_tickets_de.yaml  featured.yaml  fp_community.yaml  fp_intro.yaml  fp_keydates.yaml  fp_keynotes.yaml  fp_latest_videos.yaml  fp_masterclasses.yaml  fp_newsletter.yaml  fp_programme_status.yaml  fp_sponsoring_newsletter.yaml  fp_sponsors.yaml  fp_stats.yaml  fp_tickets.yaml  fp_why_attend.yaml  hero_images.yaml  homepage.yaml  intro.yaml  keydates.yaml  keynotes.yaml  landing_page.json  landing_page.yaml  links.json  links.yaml  masterclasses.yaml  masterclasses_carousel.yaml  mediakit_faq.yaml  motto.yaml  nav.yaml  navigation.yaml  newsletter.yaml  past_editions.yaml  (+34 more)
design_guidelines/: app.js  design-system.json  index.html  style.css
docs/: ASSETS-LICENSE  archive.md  blog_post.md  coding.md  components.md  contact_form.md  deployment.md  landing_pages.md  live.md  post-conference.md  pretalx.md  recordings.md  redirects.md  search.md  seo-crosslinking-concept.md  seo.md  sponsors_partners.md  subsites.md  tracks.md  transcripts.md
models/: 404.ini  archive-edition.ini  archive.ini  blog-post.ini  blog.ini  buy-ticket.ini  call-for-proposals.ini  certificate_share.ini  certificates_share.ini  contact-form.ini  faqs.ini  financial-aid.ini  imprint.ini  keynote.ini  landing-page-active.ini  (+26 more)
(+8723 files in other folders)
