[project]
name = "pyconde-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "pillow>=11.1.0,<12",
    "lektor>=3.3.12, <4",
    "pytanis@git+https://github.com/PioneersHub/pytanis.git@main",
]

[project.optional-dependencies]
matching = ["fuzzywuzzy>=0.18.0"]
backend = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",
    "W",
    "E302", # pycodestyle
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PL",   # pylint
    "TID",  # tidy
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]
ignore = [
    "E501", # may cause conflicts with ruff formatter
    "W191",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
